# leptos-template

./: .gitignore  .taurignore  Cargo.toml  README.md  flake.nix  index.html  rust-toolchain.toml
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: counter.rs  greeter.rs  multimedia.rs
styles/: app.css  greeter.css  multimedia.css
