[package]
name = "leptos-template-ui"
description = "A Leptos Template"
authors = ["Florian Zier <9168602+zierf@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "^0.6.15", features = ["csr", "nightly"] }
leptos_router = { version = "^0.6.15", features = ["csr", "nightly"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[workspace]
members = ["src-tauri"]
